[metadata]
name = gemurl
version = 1.0.0
author = Rasmus Bondesson
author_email = raek@raek.se
url = https://github.com/raek/gemurl
description = "A library for normalizing gemini:// URLs"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Internet
    Topic :: Utilities

[options]
py_modules = gemurl
python_requires = >=3.6

[options.extras_require]
test =
    flake8
    pytest

[options.entry_points]
console_scripts =
    gemurl = gemurl:main

[flake8]
max_line_length = 120
